--- a/style.css
+++ b/style.css
@@ -1,13 +1,39 @@
-/* css code */
+@font-face {
+  font-family: 'Ranga';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ranga Regular'), local('Ranga-Regular'), url(./fonts/Ranga/Ranga-Regular.ttf) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-.title {
-  color: khaki ;
-  font-family: Helvetica;
-  font-size: 100px;
-  font-weight: bold;
+@font-face {
+  font-family: 'Sedgwick Ave';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Sedgwick Ave Regular'), local('SedgwickAve-Regular'), url(./fonts/Sedgwick_Ave/SedgwickAve-Regular.ttf) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+h1 {
+  font-family: 'Ranga';
+  margin-left: 1.66%;
+  padding-bottom: 1px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid rgb(25, 8, 48);
+  width: 30%;
 
 }
 
-.header {
-  border: 5px;
+h2 {
+  font-family: 'Sedgwick Ave';
+  margin-left: 1.66%;
+  margin-top: 10px;
+  padding-top: 5px;
+}
+
+img {
+  width: 30%;
+  height: 30%;
+  float: left;
+  margin: 1.66%;
 }
