--- a/style.css
+++ b/style.css
@@ -14,26 +14,31 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-h1 {
+body{
+  padding-top: 50px;
+}
+
+.navbar {
   font-family: 'Ranga';
-  margin-left: 1.66%;
-  padding-bottom: 1px;
-  margin-bottom: 10px;
-  border-bottom: 2px solid rgb(25, 8, 48);
-  width: 30%;
-
+  color: rgb(255, 255, 255);
 }
 
-h2 {
+
+.navbar-light .navbar-brand .navbar-nav .nav-link {
+    color: rgb(255, 255, 255);
+}
+
+
+.jumbotron {
+  color: rgb(255, 255, 255) ;
+  background-color: #563d7c;
+  border-radius: 0 ;
+}
+
+.intro {
   font-family: 'Sedgwick Ave';
-  margin-left: 1.66%;
-  margin-top: 10px;
-  padding-top: 5px;
-}
+  font-size: 180%;
+  width: 40%;
+  border-bottom: 2px solid rgb(255, 255, 255);
 
-img {
-  width: 30%;
-  height: 30%;
-  float: left;
-  margin: 1.66%;
 }
