--- a/style.css
+++ b/style.css
@@ -43,13 +43,11 @@ body{
   font-family: 'Sedgwick Ave';
   font-size: 280%;
   text-align: center;
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+              0px 8px 10px rgb(0, 0, 0, 0.1),
+              0px 15px 18px rgb(0,0,0,0.1);
 }
 
-.intro-sm {
-  font-family: 'Sedgwick Ave';
-  font-size: 280%;
-  text-align: center;
-}
 
 hr {
   width: 600px;
