--- a/style.css
+++ b/style.css
@@ -42,9 +42,8 @@ body{
 .intro {
   font-family: 'Sedgwick Ave';
   text-align: center;
-  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
-              0px 8px 13px rgb(0, 0, 0, 0.1),
-              0px 18px 23px rgb(0,0,0,0.1);
+  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.3),
+              0px 8px 13px rgb(0, 0, 0, 0.1);
 
 }
 
