--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'Tahu';
+  src: url(./fonts/Tahu/Tahu!.ttf) format('truetype');
+}
+
 body{
   padding-top: 50px;
 }
@@ -40,7 +45,7 @@ body{
 }
 
 .intro {
-  font-family: 'Sedgwick Ave';
+  font-family: 'Tahu';
   text-align: center;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.3),
               0px 8px 13px rgb(0, 0, 0, 0.1);
