--- a/bootstrap.css
+++ b/bootstrap.css
@@ -3989,7 +3989,7 @@ input[type="button"].btn-block {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 1.3em;
   line-height: inherit;
   white-space: nowrap;
 }
@@ -4329,7 +4329,8 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: white;
+  font-size: 1.3em;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
