--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ body{
   font-size: 1.3em;
 }
 
-
-..navbar .navbar-light .navbar-brand .navbar-nav .nav-link .navTitle .navbar .navbar-dark {
+.navbar-light .navbar-brand .navbar-nav .nav-link .navTitle .navbar .navbar-dark {
   font-family: 'Ranga';
   color: white;
   font-size: 1.3em;
