--- a/otherPages/colorGame/style.css
+++ b/otherPages/colorGame/style.css
@@ -1,6 +1,14 @@
 /* -- Fonts -- */
 
 @font-face {
+  font-family: 'Ranga';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ranga Regular'), local('Ranga-Regular'), url(./fonts/Ranga/Ranga-Regular.ttf) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
   font-family: 'Tahu';
   src: url(./fonts/Tahu/Tahu!.ttf) format('truetype');
 }
@@ -22,10 +30,38 @@ body{
 
 .colorDisplay{
   text-transform: uppercase;
+  font-size: 60px;
+}
+
+#colorDisplay{
+  font-size: 50px;
 }
 
 button{
+  font-family: 'Ranga';
+  font-size: 15px;
+  border: none;
+  background: none;
+  padding-top: 2px;
+  height: 100%;
+  font-weight: 800;
+  font-size: 24px;
+  color:rgb(85, 132, 194);
+  letter-spacing: 1px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  outline: none;
+}
 
+
+#messageToPlayer{
+  display: inline-block;
+  width: 60%;
+  font-weight: 800;
+  font-size: 24px;
+  letter-spacing: 1px;
+  color:rgb(85, 132, 194);
 }
 
 .headerText{
@@ -37,12 +73,15 @@ button{
   color: white;
 }
 
+
 .navbar{
+  font-family: 'Ranga';
   display: block;
   background-color: white;
   width: 100%;
-  height: 30px;
+  height: 40px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .container {
@@ -57,6 +96,9 @@ button{
   float: left;
   margin: 1.33%;
   border-radius: 10px;
+  transition: background 0.5s;
+  -webkit-transition: background 0.5s;
+  -moz-transition: background 0.5s;
 }
 
 .footer{
@@ -73,4 +115,8 @@ button{
 
 .wrongChoice{
   background-color: rgba(194, 147, 85, 0.0);
+}
+
+.selected {
+  background-color:rgb(85, 132, 194);
 }
